# Simple-C-Compiler

./: .gitignore  CMakeLists.txt  README.md
antlr_free/: builder.py  parser.py  try.c
antlr_free/python/: builder.py  parser.py
example/: Arithmetic.c  Arithmetic.txt  Arithmetic.xml  Arithmetic.yaml  KMP.c  KMP.txt  KMP.yaml  Palindrome.c  Palindrome.txt  Palindrome.xml  Palindrome.yaml  Sorting.c  Sorting.txt  Sorting.xml  Sorting.yaml
rule/: C.g4
sample/: Arithmetic.c  Arithmetic.xml  KMP.xml  Palindrome.xml  Sorting.xml  sample_1.c
src/: XMLGeneratorListener.h  main.cpp  main_token.cpp
